echo_hpa_example/echo.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment #name of the deployment
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: echo-pod #engine will try to mach this selector with template.metadata.labes.app
  template:
    metadata:
      labels:
        app: echo-pod #test
    spec:
      containers:
      - name: xxx 
        resources:
          requests:
            cpu: "0.5"
          limits:
            cpu: "0.5"
        image: rushantha/python-echo:3
        ports:
        - containerPort: 8080
