echo_hpa_example/echo.svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
spec:
  selector:
    app: echo-pod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
